fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+[data-previous-operand],
+[data-current-operand] {
+  font-family: Arial, sans-serif;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
